Fixed bug in x button where text overlap occurred

--- a/Website/client/src/App.css
+++ b/Website/client/src/App.css
@@ -69,14 +69,12 @@ img {
 
 .alertBox {
   z-index: 50;
-  background-color: green;
-
 }
 
 .alert {
   position: fixed;
   color: white;
-  width: 200px;
+  width: 215px;
   background-color: lightblue;
   padding: 10px;
   box-shadow: 0 0 5px rgba(0,0,0,0.4);
@@ -126,7 +124,7 @@ img {
   right: 0;
   top: 0;
   bottom: 0;
-  height: 50px;
+  height: 70px;
   text-align: center;
 }
 
@@ -137,4 +135,5 @@ img {
   height: 20px;
   margin-left: 165px;
   float: right;
+  padding-left: 20px;
 }
